<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.1.8.RELEASE</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.ontviewapp</groupId>
    <artifactId>ontview</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>ontview</name>
    <description>OntViewJS</description>

    <properties>
        <java.version>1.9</java.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomcat.embed</groupId>
            <artifactId>tomcat-embed-jasper</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>ontview</groupId>
            <artifactId>owlapi-distribution</artifactId>
            <scope>system</scope>
            <version>1.0</version>
			<systemPath>${project.basedir}/lib/pellet/owlapi-distribution-3.4.3-bin.jar</systemPath>		
	    </dependency>
        <dependency>
            <groupId>ontview</groupId>
            <artifactId>facility-package</artifactId>
            <scope>system</scope>
			<systemPath>${project.basedir}/lib/kce/facility.jar</systemPath>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>ontview</groupId>
            <artifactId>taxonomy-makers</artifactId>
            <scope>system</scope>
			<systemPath>${project.basedir}/lib/kce/taxonomy-makers.jar</systemPath>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>ontview</groupId>
            <artifactId>taxonomy</artifactId>
            <scope>system</scope>
			<systemPath>${project.basedir}/lib/kce/taxonomy.jar</systemPath>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>ontview</groupId>
            <artifactId>structuralReducer</artifactId>
            <scope>system</scope>
			<systemPath>${project.basedir}/lib/kce/structuralReducer.jar</systemPath>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>ontview</groupId>
            <artifactId>pedviz</artifactId>
            <scope>system</scope>
			<systemPath>${project.basedir}/lib/pedviz_0.15.jar</systemPath>            
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>ontview</groupId>
            <artifactId>kce</artifactId>
            <scope>system</scope>
			<systemPath>${project.basedir}/lib/kce/kce.jar</systemPath>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>ontview</groupId>
            <artifactId>swingLayouts</artifactId>
            <scope>system</scope>
			<systemPath>${project.basedir}/lib/visualSwing/org.dyno.visual.swing.layouts_0.9.12.I20090527-2200.jar</systemPath>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>ontview</groupId>
            <artifactId>swing</artifactId>
            <scope>system</scope>
			<systemPath>${project.basedir}/lib/visualSwing/org.dyno.visual.swing_0.9.12.I20090527-2200.jar</systemPath>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>ontview</groupId>
            <artifactId>jfact</artifactId>
            <scope>system</scope>
			<systemPath>${project.basedir}/lib/jfact/jfact.jar</systemPath>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>ontview</groupId>
            <artifactId>pellet</artifactId>
            <scope>system</scope>
			<systemPath>${project.basedir}/lib/pellet/pellet-2.3.1.jar</systemPath>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>ontview</groupId>
            <artifactId>aterm</artifactId>
            <scope>system</scope>
			<systemPath>${project.basedir}/lib/pellet/aterm-java-1.6.jar</systemPath>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>ontview</groupId>
            <artifactId>jgrapht</artifactId>
            <scope>system</scope>
			<systemPath>${project.basedir}/lib/pellet/jgrapht-jdk1.5.jar</systemPath>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>com.vaadin.external.google</groupId>
            <artifactId>android-json</artifactId>
            <version>0.0.20131108.vaadin1</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <inherited>true</inherited>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
			
			<plugin>
			  <groupId>org.apache.maven.plugins</groupId>
			  <artifactId>maven-compiler-plugin</artifactId>
			  <version>3.8.1</version>
			  <configuration>
			  <configuration>
				  <source>1.8</source>
				  <target>1.9</target>
				</configuration>
				<compilerArgs>
				  <arg>--add-exports</arg>
				  <arg>javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</arg>
				</compilerArgs>
				</configuration>
			</plugin>			
        </plugins>
        <resources>
            <resource>
                <directory>src/main/webapp</directory>
            </resource>
        </resources>
    </build>
</project>
